fix: finish migration

--- a/content/docs/configuration/auto-update.mdx
+++ b/content/docs/configuration/auto-update.mdx
@@ -1,18 +1,18 @@
 ---
+title: Auto update
 description: Learn about the auto-update feature in SkinsRestorer.
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
 
-# Auto update
-
 The plugin uses a built-in auto-update system to check for updates every time the server starts.
 If a new version is available, the plugin will automatically download and install it on the next server restart.
 
 <Callout type="info" emoji="ℹ️">
-  If you run a proxy network (BungeeCord/Velocity), the plugin will not auto-update on the proxy, but only on the
-  backend servers.
-  When you get prompted to update the plugin, you need to always manually update it on the proxy
+  If you run a proxy network (BungeeCord/Velocity), the plugin will not
+  auto-update on the proxy, but only on the backend servers. When you get
+  prompted to update the plugin, you need to always manually update it on the
+  proxy
 </Callout>
 
 ### Why is auto update enabled by default?
