--- a/content/docs/configuration/locale-translations.mdx
+++ b/content/docs/configuration/locale-translations.mdx
@@ -1,10 +1,9 @@
 ---
+title: Locale and Translations
 description: Learn how to translate SkinsRestorer messages.
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
-
-# Locale and Translations
 
 SkinsRestorer has an advanced locale system,
 which allows every player to receive a translation in their own language using their Minecraft client locale.
@@ -26,8 +25,8 @@ If your locale is missing, you can contact support [on our Discord](https://skin
 ## Custom translations
 
 <Callout type="warning" emoji="⚠️">
-  If you are using a Proxy (BungeeCord/Velocity), you must configure locale files on every server as well as on the
-  proxy.
+  If you are using a Proxy (BungeeCord/Velocity), you must configure locale
+  files on every server as well as on the proxy.
 </Callout>
 
 Inside the `plugins/SkinsRestorer/locale` folder, you can find two folders, `repository` and `custom`.
@@ -43,7 +42,7 @@ Here is a list of all the locales that are currently available in SkinsRestorer.
 ### Locale codes
 
 | Locale                          | code    | file name           |
-|---------------------------------|---------|---------------------|
+| ------------------------------- | ------- | ------------------- |
 | Arabic                          | `ar`    | `locale_ar.json`    |
 | Bulgarian                       | `bg`    | `locale_bg.json`    |
 | Catalan                         | `ca`    | `locale_ca.json`    |
