--- a/content/docs/development/index.mdx
+++ b/content/docs/development/index.mdx
@@ -1,11 +1,14 @@
 ---
+title: Development
 description: Learn how to integrate your application with SkinsRestorer.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
-import { CircleStackIcon, Cog6ToothIcon, CommandLineIcon } from '@heroicons/react/24/solid';
-
-# SkinsRestorer Development
+import {
+  CircleStackIcon,
+  Cog6ToothIcon,
+  CommandLineIcon,
+} from '@heroicons/react/24/solid';
 
 SkinsRestorer allows you to develop your own applications and plugins that can interact with SkinsRestorer.
 This page will help you to integrate them with SkinsRestorer.
@@ -16,27 +19,18 @@ In these sections, you can read about how to develop with the SkinsRestorer API.
 
 <Cards>
   <Card
-    icon={
-      <CommandLineIcon />
-    }
+    icon={<CommandLineIcon />}
     title="API"
     href="/docs/development/api"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <CircleStackIcon />
-    }
+    icon={<CircleStackIcon />}
     title="Data Storage"
     href="/docs/development/data-storage"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <Cog6ToothIcon />
-    }
+    icon={<Cog6ToothIcon />}
     title="Inner workings"
     href="/docs/development/inner-workings"
-  >
-  </Card>
+  ></Card>
 </Cards>
