--- a/content/docs/development/storage.mdx
+++ b/content/docs/development/storage.mdx
@@ -1,8 +1,7 @@
 ---
+title: How SkinsRestorer stores data
 description: Learn how SkinsRestorer manages skin and player data.
 ---
-
-# How SkinsRestorer stores data
 
 SkinsRestorer stores skin data in a file or database (depending on your configuration).
 
@@ -54,16 +53,16 @@ The decoded data should look like this:
 
 ```json
 {
-  "timestamp" : 1705586820658,
-  "profileId" : "61699b2ed3274a019f1e0ea8c3f06bc6",
-  "profileName" : "Dinnerbone",
-  "signatureRequired" : true,
-  "textures" : {
-    "SKIN" : {
-      "url" : "http://textures.minecraft.net/texture/50c410fad8d9d8825ad56b0e443e2777a6b46bfa20dacd1d2f55edc71fbeb06d"
+  "timestamp": 1705586820658,
+  "profileId": "61699b2ed3274a019f1e0ea8c3f06bc6",
+  "profileName": "Dinnerbone",
+  "signatureRequired": true,
+  "textures": {
+    "SKIN": {
+      "url": "http://textures.minecraft.net/texture/50c410fad8d9d8825ad56b0e443e2777a6b46bfa20dacd1d2f55edc71fbeb06d"
     },
-    "CAPE" : {
-      "url" : "http://textures.minecraft.net/texture/5786fe99be377dfb6858859f926c4dbc995751e91cee373468c5fbf4865e7151"
+    "CAPE": {
+      "url": "http://textures.minecraft.net/texture/5786fe99be377dfb6858859f926c4dbc995751e91cee373468c5fbf4865e7151"
     }
   }
 }
