--- a/content/docs/features/custom-skins.mdx
+++ b/content/docs/features/custom-skins.mdx
@@ -1,10 +1,9 @@
 ---
+title: Custom Skins
 description: Learn how to use custom skins with SkinsRestorer.
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
-
-# Custom Skins
 
 SkinsRestorer allows you to create custom skins that you can select via `/skin <name>`.
 All You have to do is either run a command to generate a skin or upload a skin file to the server.
@@ -19,8 +18,9 @@ You would also not want to use a name that a person playing on your server might
 as it would override their skin instead of using the skin they have set in their Minecraft account.
 
 <Callout type="info" emoji="ℹ️">
-  If you want to set a skin of a player on your server, run `/skin [name] [playername]` instead.
-  Using custom skins to set a skin of a player is not recommended and discouraged.
+  If you want to set a skin of a player on your server, run `/skin [name]
+  [playername]` instead. Using custom skins to set a skin of a player is not
+  recommended and discouraged.
 </Callout>
 
 There are multiple ways to generate a custom skin:
@@ -35,7 +35,8 @@ We have built a web app that allows you to convert .png skin files to .customski
 You can find the Skinfile Generator on [our website](/generator).
 
 <Callout type="warning" emoji="⚠️">
-  The Skinfile Generator only works if you use file storage. MySQL users should use the `/sr createcustom` command.
+  The Skinfile Generator only works if you use file storage. MySQL users should
+  use the `/sr createcustom` command.
 </Callout>
 
 Steps to generate a custom skin using the Skinfile Generator:
