--- a/content/docs/features/skin-edit.mdx
+++ b/content/docs/features/skin-edit.mdx
@@ -1,10 +1,9 @@
 ---
+title: Skin Edit
 description: Learn how to edit your skin with SkinsRestorer.
 ---
 
 import { Step, Steps } from 'fumadocs-ui/components/steps';
-
-# Skin Edit
 
 SkinsRestorer allows you to edit the current skin you have on.
 Learn how to edit and update your local skin.
@@ -18,6 +17,7 @@ This time we are going to upload your edited skin to imgur. Follow the following
     ### Run the command
 
     Run the command `/skin edit` in the chat. This will give you a link to the skin editor.
+
   </Step>
 
   <Step>
@@ -26,6 +26,7 @@ This time we are going to upload your edited skin to imgur. Follow the following
     Use the skin editor to make changes to your skin. Once you are done, click on save the skin.
 
     ![Save edited skin](/assets/edit/save.png)
+
   </Step>
 
   <Step>
@@ -35,6 +36,7 @@ This time we are going to upload your edited skin to imgur. Follow the following
     Right click the image and click on "save image as"
 
     ![Save image](/assets/edit/save-as.png)
+
   </Step>
 
   <Step>
@@ -43,6 +45,7 @@ This time we are going to upload your edited skin to imgur. Follow the following
     Upload the file to **imgur** (see image below)
 
     ![Dropping skin image into imgur](/assets/imgur/upload-image.png)
+
   </Step>
 
   <Step>
@@ -59,5 +62,6 @@ This time we are going to upload your edited skin to imgur. Follow the following
     That's it! You can now set the skin by using your **imgur** URL!
     The command to set the skin is `/skin url "url"`.
     Make sure the URL is in quotes.
+
   </Step>
 </Steps>
