--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,11 +1,10 @@
 ---
+title: Introduction
 description: Introduction to SkinsRestorer and its features.
 ---
 
 import { DownloadIcon } from 'lucide-react';
 import { Card, Cards } from 'fumadocs-ui/components/card';
-
-# Introduction
 
 SkinsRestorer is a plugin that restores skins for offline mode servers & networks that gives the players the ability to
 change their skins by typing a single command. In addition, SkinsRestorer allows caching skins on larger networks.
@@ -23,14 +22,17 @@ You don't need a permission plugin to control commands for your players, with Sk
 
 So, what is it in for you?
 
-* Custom skins!, generate a skin for yourself (`/skin url "<url>"`) or for the entire server (`/sr createcustom`)!
-* Skins will always work, even if you have no internet or when Mojang is down!
-* You can get rid of Steve & Alex skins by changing them to your own default skins.
-* Instant skin change (no rejoin required)
+- Custom skins!, generate a skin for yourself (`/skin url "<url>"`) or for the entire server (`/sr createcustom`)!
+- Skins will always work, even if you have no internet or when Mojang is down!
+- You can get rid of Steve & Alex skins by changing them to your own default skins.
+- Instant skin change (no rejoin required)
 
 ## Getting started
 
 <Cards>
-  <Card icon={<DownloadIcon />} title="Install SkinsRestorer" href="/docs/installation">
-  </Card>
+  <Card
+    icon={<DownloadIcon />}
+    title="Install SkinsRestorer"
+    href="/docs/installation"
+  ></Card>
 </Cards>
