--- a/content/docs/integrations/avatar-url.mdx
+++ b/content/docs/integrations/avatar-url.mdx
@@ -1,17 +1,16 @@
 ---
+title: Avatar URL
 description: Learn how to use SkinsRestorer avatars in other plugins.
 ---
-
 
 import { Step, Steps } from 'fumadocs-ui/components/steps';
 import { Callout } from 'fumadocs-ui/components/callout';
 
-# Avatar URL
-
 Do you want to show a player's head in, for example, a Discord message sent by a plugin? This is possible with SkinsRestorer!
 
 <Callout type="info" emoji="ℹ️">
-  We also have guides specifically for [DiscordSRV](/docs/integrations/discordsrv) or
+  We also have guides specifically for
+  [DiscordSRV](/docs/integrations/discordsrv) or
   [Discord-MC-Chat](/docs/integrations/discord-mc-chat).
 </Callout>
 
@@ -24,6 +23,7 @@ Do you want to show a player's head in, for example, a Discord message sent by a
 
     Make sure the plugin you want to set the avatar URL in, supports using PlaceholderAPI placeholders in the place
     where you want to use the avatar URL.
+
   </Step>
 
   <Step>
@@ -34,12 +34,10 @@ Do you want to show a player's head in, for example, a Discord message sent by a
     ```yaml
     https://mc-heads.net/avatar/%skinsrestorer_texture_id_or_steve%.png
     ```
+
   </Step>
 
-  <Step>
-    ### Reload the plugin
-    Reload the plugin to apply the changes.
-  </Step>
+<Step>### Reload the plugin Reload the plugin to apply the changes.</Step>
 
   <Step>
     ### That's it!
