--- a/content/docs/integrations/discord-mc-chat.mdx
+++ b/content/docs/integrations/discord-mc-chat.mdx
@@ -1,11 +1,9 @@
 ---
+title: Discord-MC-Chat
 description: Learn how to integrate SkinsRestorer with Discord-MC-Chat.
 ---
 
-
 import { Step, Steps } from 'fumadocs-ui/components/steps';
-
-# Discord-MC-Chat
 
 SkinsRestorer skins can be used for Discord-MC-Chat messages using the textures placeholder.
 
@@ -26,6 +24,7 @@ SkinsRestorer skins can be used for Discord-MC-Chat messages using the textures 
     ```json filename="config/discord-mc-chat.json"
     "avatarApi": "https://mc-heads.net/avatar/{player_uuid}.png",
     ```
+
   </Step>
 
   <Step>
@@ -34,12 +33,13 @@ SkinsRestorer skins can be used for Discord-MC-Chat messages using the textures 
     ```json filename="config/discord-mc-chat.json"
     "avatarApi": "https://mc-heads.net/avatar/{player_textures}.png",
     ```
+
   </Step>
 
-  <Step>
-    ### Reload Discord-MC-Chat
-    Run `/dmcc reload` in-game or in console, or `/reload` in Discord to reload.
-  </Step>
+<Step>
+  ### Reload Discord-MC-Chat Run `/dmcc reload` in-game or in console, or
+  `/reload` in Discord to reload.
+</Step>
 
   <Step>
     ### That's it!
