--- a/content/docs/integrations/discordsrv.mdx
+++ b/content/docs/integrations/discordsrv.mdx
@@ -1,11 +1,9 @@
 ---
+title: DiscordSRV
 description: Learn how to integrate SkinsRestorer with DiscordSRV.
 ---
 
-
 import { Step, Steps } from 'fumadocs-ui/components/steps';
-
-# DiscordSRV
 
 SkinsRestorer skins can be used for DiscordSRV messages using the PlaceholderAPI integration.
 
@@ -33,12 +31,10 @@ SkinsRestorer skins can be used for DiscordSRV messages using the PlaceholderAPI
     ```yaml filename="plugins/DiscordSRV/config.yml"
     AvatarUrl: https://mc-heads.net/avatar/%skinsrestorer_texture_id_or_steve%.png#{username}
     ```
+
   </Step>
 
-  <Step>
-    ### Reload DiscordSRV
-    Run `/discord reload` to reload DiscordSRV.
-  </Step>
+<Step>### Reload DiscordSRV Run `/discord reload` to reload DiscordSRV.</Step>
 
   <Step>
     ### That's it!
