--- a/content/docs/integrations/index.mdx
+++ b/content/docs/integrations/index.mdx
@@ -1,4 +1,5 @@
 ---
+title: Integrations
 description: Learn how to integrate third-party software with SkinsRestorer.
 ---
 
@@ -7,10 +8,8 @@ import {
   ChatBubbleBottomCenterTextIcon,
   ChatBubbleLeftRightIcon,
   CodeBracketIcon,
-  UserCircleIcon
+  UserCircleIcon,
 } from '@heroicons/react/24/solid';
-
-# SkinsRestorer Integrations
 
 SkinsRestorer is compatible with much third-party software. This page will help you to integrate them with SkinsRestorer.
 
@@ -20,35 +19,23 @@ In these sections, you can read on different possible integrations with third-pa
 
 <Cards>
   <Card
-    icon={
-      <CodeBracketIcon />
-    }
+    icon={<CodeBracketIcon />}
     title="PlaceholderAPI"
     href="/docs/integrations/placeholderapi"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <ChatBubbleLeftRightIcon />
-    }
+    icon={<ChatBubbleLeftRightIcon />}
     title="DiscordSRV"
     href="/docs/integrations/discordsrv"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <ChatBubbleBottomCenterTextIcon />
-    }
+    icon={<ChatBubbleBottomCenterTextIcon />}
     title="Discord MC Chat"
     href="/docs/integrations/discord-mc-chat"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <UserCircleIcon />
-    }
+    icon={<UserCircleIcon />}
     title="Avatar URL"
     href="/docs/integrations/avatar-url"
-  >
-  </Card>
+  ></Card>
 </Cards>
