--- a/content/docs/integrations/placeholderapi.mdx
+++ b/content/docs/integrations/placeholderapi.mdx
@@ -1,8 +1,7 @@
 ---
+title: PlaceholderAPI
 description: Learn how to integrate SkinsRestorer with PlaceholderAPI.
 ---
-
-# PlaceholderAPI
 
 SkinsRestorer supports PlaceholderAPI placeholders. These placeholders are automatically registered with
 PlaceholderAPI when both SkinsRestorer and PlaceholderAPI are installed on the server.
@@ -13,7 +12,7 @@ Here is a list of all possible placeholders. If a database error occurs, the pla
 `Error` and an error message will be logged to the console.
 
 | Placeholder                                | Description                                                                                         |
-|--------------------------------------------|-----------------------------------------------------------------------------------------------------|
+| ------------------------------------------ | --------------------------------------------------------------------------------------------------- |
 | `%skinsrestorer_skin_name%`                | The name of the skin set by the player or `Error` if no skin is set.                                |
 | `%skinsrestorer_skin_name_or_empty%`       | The name of the skin set by the player or a empty string if no skin is set.                         |
 | `%skinsrestorer_skin_name_or_player_name%` | The name of the skin set by the player or the player name if no skin is set.                        |
