--- a/content/docs/troubleshooting/common-issues.mdx
+++ b/content/docs/troubleshooting/common-issues.mdx
@@ -1,8 +1,7 @@
 ---
+title: Common issues
 description: Learn how to troubleshoot common issues with SkinsRestorer.
 ---
-
-# Common issues
 
 We've compiled a list of common issues that users encounter when using the plugin.
 
