--- a/content/docs/troubleshooting/proxy-mode.mdx
+++ b/content/docs/troubleshooting/proxy-mode.mdx
@@ -1,8 +1,7 @@
 ---
+title: Proxy Mode
 description: Learn how to troubleshoot proxy mode issues with SkinsRestorer.
 ---
-
-# Proxy Mode
 
 This page is for servers that are using a proxy (BungeeCord, Waterfall or Velocity) in their network to connect mutiple servers together.
 If you're not using a proxy, you can skip this page.
