--- a/content/docs/configuration/index.mdx
+++ b/content/docs/configuration/index.mdx
@@ -1,11 +1,15 @@
 ---
+title: Configuration
 description: Learn how to set up SkinsRestorer on your server.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
-import { ArrowPathIcon, ChatBubbleLeftEllipsisIcon, Cog6ToothIcon, CommandLineIcon } from '@heroicons/react/24/solid';
-
-# Setting up SkinsRestorer
+import {
+  ArrowPathIcon,
+  ChatBubbleLeftEllipsisIcon,
+  Cog6ToothIcon,
+  CommandLineIcon,
+} from '@heroicons/react/24/solid';
 
 While SkinsRestorer works out-of-the-box, you might want to change some settings to fit your needs.
 
@@ -15,35 +19,23 @@ In these sections, you can read on the different aspects of the SkinsRestorer co
 
 <Cards>
   <Card
-    icon={
-      <Cog6ToothIcon />
-    }
+    icon={<Cog6ToothIcon />}
     title="Configuration Options"
     href="/docs/configuration/options"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <CommandLineIcon />
-    }
+    icon={<CommandLineIcon />}
     title="Commands and Permissions"
     href="/docs/configuration/commands-permissions"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <ChatBubbleLeftEllipsisIcon />
-    }
+    icon={<ChatBubbleLeftEllipsisIcon />}
     title="Locale and Translations"
     href="/docs/configuration/locale-translations"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <ArrowPathIcon />
-    }
+    icon={<ArrowPathIcon />}
     title="Auto update"
     href="/docs/configuration/auto-update"
-  >
-  </Card>
+  ></Card>
 </Cards>
