--- a/content/docs/features/index.mdx
+++ b/content/docs/features/index.mdx
@@ -1,11 +1,15 @@
 ---
+title: Features
 description: Learn how to use SkinsRestorer's features.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
-import { GlobeAltIcon, PaintBrushIcon, PhotoIcon, UserIcon } from '@heroicons/react/24/solid';
-
-# Using SkinsRestorer
+import {
+  GlobeAltIcon,
+  PaintBrushIcon,
+  PhotoIcon,
+  UserIcon,
+} from '@heroicons/react/24/solid';
 
 SkinsRestorer has multiple features that you can use to get a better experience with skins.
 
@@ -15,35 +19,23 @@ In these sections, you can on different aspects of SkinsRestorer and how to use 
 
 <Cards>
   <Card
-    icon={
-      <UserIcon />
-    }
+    icon={<UserIcon />}
     title="Custom Skins"
     href="/docs/features/custom-skins"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <GlobeAltIcon />
-    }
+    icon={<GlobeAltIcon />}
     title="Skin URL"
     href="/docs/features/skin-url"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <PaintBrushIcon />
-    }
+    icon={<PaintBrushIcon />}
     title="Skin Edit"
     href="/docs/features/skin-edit"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <PhotoIcon />
-    }
+    icon={<PhotoIcon />}
     title="Skin Design"
     href="/docs/features/skin-design"
-  >
-  </Card>
+  ></Card>
 </Cards>
