--- a/content/docs/features/skin-url.mdx
+++ b/content/docs/features/skin-url.mdx
@@ -1,10 +1,9 @@
 ---
+title: Skin URL
 description: Learn how to use a custom skin by using a URL with SkinsRestorer.
 ---
 
 import { Step, Steps } from 'fumadocs-ui/components/steps';
-
-# Skin URL
 
 SkinsRestorer allows you to use a custom skin by using a URL.
 This way you can use a skin not from another player, but from a URL.
@@ -31,6 +30,7 @@ This time we are going to upload your custom skin format to imgur. Follow the fo
     We have a [skin design](/docs/features/skin-design) guide if you need help with that.
 
     ![Image in download folder](/assets/imgur/download-folder.png)
+
   </Step>
 
   <Step>
@@ -39,6 +39,7 @@ This time we are going to upload your custom skin format to imgur. Follow the fo
     Upload the file to **imgur** (see image below)
 
     ![Dropping skin image into imgur](/assets/imgur/upload-image.png)
+
   </Step>
 
   <Step>
@@ -55,5 +56,6 @@ This time we are going to upload your custom skin format to imgur. Follow the fo
     That's it! You can now set the skin by using your **imgur** URL!
     The command to set the skin is `/skin url "url"`.
     Make sure the URL is in quotes.
+
   </Step>
 </Steps>
