--- a/content/docs/installation/bukkit.mdx
+++ b/content/docs/installation/bukkit.mdx
@@ -1,18 +1,17 @@
 ---
+title: Installation on Bukkit/Spigot/Paper
 description: Learn how to install SkinsRestorer on your Bukkit/Spigot/Paper server.
 ---
 
 import { Step, Steps } from 'fumadocs-ui/components/steps';
 import { Callout } from 'fumadocs-ui/components/callout';
 
-# Installation on Bukkit/Spigot/Paper
-
 Before installing, we recommend you to read the [main installation page](/docs/installation).
 
 <Callout type="info" emoji="ℹ️">
-  If you're using BungeeCord or Velocity (or any fork of those), please follow the [BungeeCord installation
-  guide](/docs/installation/bungeecord)
-  or the [Velocity installation guide](/docs/installation/velocity) instead.
+  If you're using BungeeCord or Velocity (or any fork of those), please follow
+  the [BungeeCord installation guide](/docs/installation/bungeecord) or the
+  [Velocity installation guide](/docs/installation/velocity) instead.
 </Callout>
 
 ## Basic Installation
@@ -25,22 +24,21 @@ In this section, you can read how to set up SkinsRestorer on your Bukkit/Spigot/
     Download the latest version from [Modrinth](https://modrinth.com/plugin/skinsrestorer)
   </Step>
 
-  <Step>
-    ### Put it in the plugins folder
-    Place the `SkinsRestorer.jar` file in the `plugins` folder.
-  </Step>
+<Step>
+  ### Put it in the plugins folder Place the `SkinsRestorer.jar` file in the
+  `plugins` folder.
+</Step>
 
-  <Step>
-    ### Restart your server
-    Restart the server. (Only use `/restart` or `/stop` Do NOT use `/reload`, As `/reload` will break
-    SR!)[Plugman is also not supported]
-  </Step>
+<Step>
+  ### Restart your server Restart the server. (Only use `/restart` or `/stop` Do
+  NOT use `/reload`, As `/reload` will break SR!)[Plugman is also not supported]
+</Step>
 
-  <Step>
-    ### Verify the plugin is installed
-    The plugin should now show as green in the `/plugins` command.
-    If it's red or missing, please check your console logs for errors.
-  </Step>
+<Step>
+  ### Verify the plugin is installed The plugin should now show as green in the
+  `/plugins` command. If it's red or missing, please check your console logs for
+  errors.
+</Step>
 
   <Step>
     ### That's it!
