--- a/content/docs/installation/velocity.mdx
+++ b/content/docs/installation/velocity.mdx
@@ -1,11 +1,10 @@
 ---
+title: Installation on Velocity
 description: Learn how to install SkinsRestorer on your Velocity proxy.
 ---
 
 import { Step, Steps } from 'fumadocs-ui/components/steps';
 import { Callout } from 'fumadocs-ui/components/callout';
-
-# Installation on Velocity
 
 Before installing, we recommend you to read the [main installation page](/docs/installation).
 
@@ -14,8 +13,9 @@ Before installing, we recommend you to read the [main installation page](/docs/i
 In this section, you can read how to set up SkinsRestorer on your Velocity proxy.
 
 <Callout type="info" emoji="ℹ️">
-  Heads up! SkinsRestorer works best when you also install it on your backend servers.
-  This is not required, but you will miss out on some features. Read more below.
+  Heads up! SkinsRestorer works best when you also install it on your backend
+  servers. This is not required, but you will miss out on some features. Read
+  more below.
 </Callout>
 
 <Callout type="info" emoji="ℹ️">
@@ -28,28 +28,29 @@ In this section, you can read how to set up SkinsRestorer on your Velocity proxy
     Download the latest version from [Modrinth](https://modrinth.com/plugin/skinsrestorer)
   </Step>
 
-  <Step>
-    ### Put it in the Velocity folder
-    Place the `SkinsRestorer.jar` in the `plugins` folder of the **Velocity proxy**.
-  </Step>
+<Step>
+  ### Put it in the Velocity folder Place the `SkinsRestorer.jar` in the
+  `plugins` folder of the **Velocity proxy**.
+</Step>
 
-  <Step>
-    ### Put it into every Spigot folder
-    Place the `SkinsRestorer.jar` in the `plugins` folders of **every Spigot server**.
-  </Step>
+<Step>
+  ### Put it into every Spigot folder Place the `SkinsRestorer.jar` in the
+  `plugins` folders of **every Spigot server**.
+</Step>
 
-  <Step>
-    ### Setup player information forwarding
-    You need to setup player information forwarding in order for SkinsRestorer to communicate with your backend servers.
-    For that, follow the [Velocity forwarding guide](https://docs.papermc.io/velocity/player-information-forwarding).
-    This step is required for the plugin to work correctly on your network.
-    If this step is not done correctly, the plugin will not work correctly.
-  </Step>
+<Step>
+  ### Setup player information forwarding You need to setup player information
+  forwarding in order for SkinsRestorer to communicate with your backend
+  servers. For that, follow the [Velocity forwarding
+  guide](https://docs.papermc.io/velocity/player-information-forwarding). This
+  step is required for the plugin to work correctly on your network. If this
+  step is not done correctly, the plugin will not work correctly.
+</Step>
 
-  <Step>
-    ### Restart your servers
-    Restart (`/restart`, `/stop` or `/end`) all Spigot servers and the Velocity proxy.
-  </Step>
+<Step>
+  ### Restart your servers Restart (`/restart`, `/stop` or `/end`) all Spigot
+  servers and the Velocity proxy.
+</Step>
 
   <Step>
     ### Ensure the plugin is in Proxy Mode on the servers
@@ -67,30 +68,31 @@ In this section, you can read how to set up SkinsRestorer on your Velocity proxy
 
     If you don't see this message, make sure you you set up player information forwarding correctly.
     SkinsRestorer will not work correctly if you don't see this message.
+
   </Step>
 
-  <Step>
-    ### Configure the plugin
-    You may now [configure SkinsRestorer](/docs/configuration) on the Velocity proxy.
-  </Step>
+<Step>
+  ### Configure the plugin You may now [configure
+  SkinsRestorer](/docs/configuration) on the Velocity proxy.
+</Step>
 
-  <Step>
-    ### Sync configs
-    Make sure you have the same `plugins/SkinsRestorer/config.yml` file on all servers and the Velocity proxy.
-    This file contains important settings that are required for the plugin to work the same on all servers.
-    If you don't have the same `config.yml` file on all servers, you may experience issues.
-  </Step>
+<Step>
+  ### Sync configs Make sure you have the same
+  `plugins/SkinsRestorer/config.yml` file on all servers and the Velocity proxy.
+  This file contains important settings that are required for the plugin to work
+  the same on all servers. If you don't have the same `config.yml` file on all
+  servers, you may experience issues.
+</Step>
 
-  <Step>
-    ### Restart your servers
-    Restart (`/restart`, `/stop` or `/end`) all Spigot servers and the Velocity proxy.
-  </Step>
+<Step>
+  ### Restart your servers Restart (`/restart`, `/stop` or `/end`) all Spigot
+  servers and the Velocity proxy.
+</Step>
 
-  <Step>
-    ### Check console for errors
-    Check the console logs of Velocity and all servers for errors
-    If you see any errors, report them to us on Discord.
-  </Step>
+<Step>
+  ### Check console for errors Check the console logs of Velocity and all
+  servers for errors If you see any errors, report them to us on Discord.
+</Step>
 
   <Step>
     ### That's it!
