--- a/content/docs/troubleshooting/index.mdx
+++ b/content/docs/troubleshooting/index.mdx
@@ -1,4 +1,5 @@
 ---
+title: Troubleshooting
 description: Learn how to troubleshoot issues with SkinsRestorer.
 ---
 
@@ -8,10 +9,8 @@ import {
   ExclamationTriangleIcon,
   FireIcon,
   GlobeAltIcon,
-  LifebuoyIcon
+  LifebuoyIcon,
 } from '@heroicons/react/24/solid';
-
-# Fixing issues with SkinsRestorer
 
 SkinsRestorer may sometimes have issues working properly, it is important to know how to troubleshoot these issues.
 
@@ -21,43 +20,28 @@ In these sections, you can read on different ways to troubleshoot issues with Sk
 
 <Cards>
   <Card
-    icon={
-      <LifebuoyIcon />
-    }
+    icon={<LifebuoyIcon />}
     title="Common issues"
     href="/docs/troubleshooting/common-issues"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <GlobeAltIcon />
-    }
+    icon={<GlobeAltIcon />}
     title="Proxy Mode"
     href="/docs/troubleshooting/proxy-mode"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <FireIcon />
-    }
+    icon={<FireIcon />}
     title="Firewall"
     href="/docs/troubleshooting/firewall"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <ExclamationTriangleIcon />
-    }
+    icon={<ExclamationTriangleIcon />}
     title="Incompatibility list"
     href="/docs/troubleshooting/incompatibility-list"
-  >
-  </Card>
+  ></Card>
   <Card
-    icon={
-      <ComputerDesktopIcon />
-    }
+    icon={<ComputerDesktopIcon />}
     title="Launcher issues"
     href="/docs/troubleshooting/launcher-issues"
-  >
-  </Card>
+  ></Card>
 </Cards>
