--- a/content/docs/troubleshooting/index.mdx
+++ b/content/docs/troubleshooting/index.mdx
@@ -4,13 +4,7 @@ description: Learn how to troubleshoot issues with SkinsRestorer.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
-import {
-  ComputerDesktopIcon,
-  ExclamationTriangleIcon,
-  FireIcon,
-  GlobeAltIcon,
-  LifebuoyIcon,
-} from '@heroicons/react/24/solid';
+import { Monitor, AlertTriangle, Flame, Globe, LifeBuoy } from 'lucide-react';
 
 SkinsRestorer may sometimes have issues working properly, it is important to know how to troubleshoot these issues.
 
@@ -20,27 +14,27 @@ In these sections, you can read on different ways to troubleshoot issues with Sk
 
 <Cards>
   <Card
-    icon={<LifebuoyIcon />}
+    icon={<LifeBuoy />}
     title="Common issues"
     href="/docs/troubleshooting/common-issues"
   ></Card>
   <Card
-    icon={<GlobeAltIcon />}
+    icon={<Globe />}
     title="Proxy Mode"
     href="/docs/troubleshooting/proxy-mode"
   ></Card>
   <Card
-    icon={<FireIcon />}
+    icon={<Flame />}
     title="Firewall"
     href="/docs/troubleshooting/firewall"
   ></Card>
   <Card
-    icon={<ExclamationTriangleIcon />}
+    icon={<AlertTriangle />}
     title="Incompatibility list"
     href="/docs/troubleshooting/incompatibility-list"
   ></Card>
   <Card
-    icon={<ComputerDesktopIcon />}
+    icon={<Monitor />}
     title="Launcher issues"
     href="/docs/troubleshooting/launcher-issues"
   ></Card>
