--- a/content/docs/development/index.mdx
+++ b/content/docs/development/index.mdx
@@ -4,11 +4,7 @@ description: Learn how to integrate your application with SkinsRestorer.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
-import {
-  CircleStackIcon,
-  Cog6ToothIcon,
-  CommandLineIcon,
-} from '@heroicons/react/24/solid';
+import { Database, Settings, Terminal } from 'lucide-react';
 
 SkinsRestorer allows you to develop your own applications and plugins that can interact with SkinsRestorer.
 This page will help you to integrate them with SkinsRestorer.
@@ -18,18 +14,14 @@ This page will help you to integrate them with SkinsRestorer.
 In these sections, you can read about how to develop with the SkinsRestorer API.
 
 <Cards>
+  <Card icon={<Terminal />} title="API" href="/docs/development/api"></Card>
   <Card
-    icon={<CommandLineIcon />}
-    title="API"
-    href="/docs/development/api"
-  ></Card>
-  <Card
-    icon={<CircleStackIcon />}
+    icon={<Database />}
     title="Data Storage"
     href="/docs/development/data-storage"
   ></Card>
   <Card
-    icon={<Cog6ToothIcon />}
+    icon={<Settings />}
     title="Inner workings"
     href="/docs/development/inner-workings"
   ></Card>
