--- a/content/docs/features/index.mdx
+++ b/content/docs/features/index.mdx
@@ -4,12 +4,7 @@ description: Learn how to use SkinsRestorer's features.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
-import {
-  GlobeAltIcon,
-  PaintBrushIcon,
-  PhotoIcon,
-  UserIcon,
-} from '@heroicons/react/24/solid';
+import { Globe, Palette, Image, User } from 'lucide-react';
 
 SkinsRestorer has multiple features that you can use to get a better experience with skins.
 
@@ -19,22 +14,18 @@ In these sections, you can on different aspects of SkinsRestorer and how to use 
 
 <Cards>
   <Card
-    icon={<UserIcon />}
+    icon={<User />}
     title="Custom Skins"
     href="/docs/features/custom-skins"
   ></Card>
+  <Card icon={<Globe />} title="Skin URL" href="/docs/features/skin-url"></Card>
   <Card
-    icon={<GlobeAltIcon />}
-    title="Skin URL"
-    href="/docs/features/skin-url"
-  ></Card>
-  <Card
-    icon={<PaintBrushIcon />}
+    icon={<Palette />}
     title="Skin Edit"
     href="/docs/features/skin-edit"
   ></Card>
   <Card
-    icon={<PhotoIcon />}
+    icon={<Image />}
     title="Skin Design"
     href="/docs/features/skin-design"
   ></Card>
