--- a/content/docs/integrations/index.mdx
+++ b/content/docs/integrations/index.mdx
@@ -4,12 +4,7 @@ description: Learn how to integrate third-party software with SkinsRestorer.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
-import {
-  ChatBubbleBottomCenterTextIcon,
-  ChatBubbleLeftRightIcon,
-  CodeBracketIcon,
-  UserCircleIcon,
-} from '@heroicons/react/24/solid';
+import { MessageCircle, MessagesSquare, Code, User } from 'lucide-react';
 
 SkinsRestorer is compatible with much third-party software. This page will help you to integrate them with SkinsRestorer.
 
@@ -19,22 +14,22 @@ In these sections, you can read on different possible integrations with third-pa
 
 <Cards>
   <Card
-    icon={<CodeBracketIcon />}
+    icon={<Code />}
     title="PlaceholderAPI"
     href="/docs/integrations/placeholderapi"
   ></Card>
   <Card
-    icon={<ChatBubbleLeftRightIcon />}
+    icon={<MessagesSquare />}
     title="DiscordSRV"
     href="/docs/integrations/discordsrv"
   ></Card>
   <Card
-    icon={<ChatBubbleBottomCenterTextIcon />}
+    icon={<MessageCircle />}
     title="Discord MC Chat"
     href="/docs/integrations/discord-mc-chat"
   ></Card>
   <Card
-    icon={<UserCircleIcon />}
+    icon={<User />}
     title="Avatar URL"
     href="/docs/integrations/avatar-url"
   ></Card>
