Add Fabric and NeoForge installation docs

--- a/content/docs/installation/index.mdx
+++ b/content/docs/installation/index.mdx
@@ -72,4 +72,33 @@ Select your server type below to get started.
     title="Velocity"
     href="/docs/installation/velocity"
   ></Card>
+  <Card
+    icon={
+      <Image
+        src="/platform/fabric.svg"
+        alt="Fabric"
+        width={24}
+        height={24}
+      />
+    }
+    title="Fabric"
+    href="/docs/installation/fabric"
+  ></Card>
+  <Card
+    icon={
+      <Image
+        src="/platform/neoforge.svg"
+        alt="NeoForge"
+        width={24}
+        height={24}
+      />
+    }
+    title="NeoForge"
+    href="/docs/installation/neoforge"
+  ></Card>
 </Cards>
+
+<Callout type="warning" emoji="🆕">
+  The Fabric and NeoForge mod releases of SkinsRestorer currently support **only the latest Minecraft version**. They
+  provide the same features as the Bukkit plugin when used on that supported release.
+</Callout>
